<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_name_asc"
                    android:title="@string/sort_name_asc"
                    android:checked="true" />
                <item
                    android:id="@+id/sort_name_desc"
                    android:title="@string/sort_name_desc" />
                <item
                    android:id="@+id/sort_date_newest"
                    android:title="@string/sort_date_newest" />
                <item
                    android:id="@+id/sort_date_oldest"
                    android:title="@string/sort_date_oldest" />
                <item
                    android:id="@+id/sort_size_largest"
                    android:title="@string/sort_size_largest" />
                <item
                    android:id="@+id/sort_size_smallest"
                    android:title="@string/sort_size_smallest" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_view_mode"
        android:title="@string/view_mode"
        android:icon="@drawable/ic_view_grid"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/view_grid"
                    android:title="@string/view_grid"
                    android:checked="true" />
                <item
                    android:id="@+id/view_list"
                    android:title="@string/view_list" />
                <item
                    android:id="@+id/view_details"
                    android:title="@string/view_details" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_select_all"
        android:title="@string/select_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_new_folder"
        android:title="@string/new_folder"
        android:icon="@drawable/ic_create_folder"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_hidden"
        android:title="@string/show_hidden"
        android:checkable="true"
        app:showAsAction="never" />

</menu>
